--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "sitb-react-icon",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "React component for font awesome.",
-  "main": "index.js",
+  "main": "lib/index",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint src examples",
+    "start": "node examples/server.js",
+    "compile": "babel --stage 0 ./src -d ./lib --ignore __tests__/*",
+    "prepublish": "npm run compile"
   },
   "repository": {
     "type": "git",
@@ -18,14 +21,40 @@
     "font",
     "FontAwesome"
   ],
-  "author": "Sean sean.snow@live.com",
-  "license": "ISC",
+  "author": "Sean Snow",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/sitb-software/react-icon/issues"
   },
   "homepage": "https://github.com/sitb-software/react-icon#readme",
   "dependencies": {
-    "classnames": "^2.2.0",
-    "react": "^0.14.1"
+    "babel-runtime": "^6.0.14",
+    "classnames": "^2.2.0"
+  },
+  "devDependencies": {
+    "babel": "^5.4.7",
+    "babel-core": "^5.4.7",
+    "babel-eslint": "^3.1.23",
+    "babel-loader": "^5.0.0",
+    "babel-plugin-dev-expression": "^0.1.0",
+    "bundle-loader": "^0.5.4",
+    "css-loader": "^0.21.0",
+    "eslint": "^1.8.0",
+    "eslint-config-rackt": "^1.1.1",
+    "eslint-plugin-react": "^3.6.3",
+    "express": "^4.13.3",
+    "express-urlrewrite": "^1.2.0",
+    "file-loader": "^0.8.4",
+    "font-awesome": "^4.4.0",
+    "fs": "0.0.2",
+    "less": "^2.5.3",
+    "less-loader": "^2.2.1",
+    "path": "^0.12.7",
+    "react": ">=0.14.1",
+    "react-dom": "^0.14.2",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.6",
+    "webpack": "^1.12.2",
+    "webpack-dev-middleware": "^1.2.0"
   }
 }
